--- a/latex/content/implementation.tex
+++ b/latex/content/implementation.tex
@@ -5,23 +5,23 @@
 
 \chapter{Cas d'utilisations}\label{chap:usecase}
 
-De manière générale l'utilisation du vote électronique par rapport à un vote traditionel ouvre la voie à 
+De manière générale l'utilisation du vote électronique par rapport à un vote traditionnel ouvre la voie à 
 des attaques qui était jusqu'à présent impossible. 
 
-Lorsque l'action de voter ne se fait plus dans un isoloire dans un bureau de vote (ce qui est déjà le cas
-pour le vote par correspondance suisse) il y a une plus grande possibilité de coércition des votants.
+Lorsque l'action de voter ne se fait plus dans un isoloirs dans un bureau de vote (ce qui est déjà le cas
+pour le vote par correspondance suisse) il y a une plus grande possibilité de coercition des votants.
 On ne pourra jamais exclure que des votants aient été contraint dans leur choix. 
-Le vote électronique ne résouds pas ce problème.
+Le vote électronique ne résous pas ce problème.
 
 \section{Cas d'utilisations}
 \subsection{Vote lors d'une assemblée}
 
-Lors d'un assemblée d'une association ou d'une entreprise/coopérative, les décisions sont souvant prise avec
+Lors d'un assemblée d'une association ou d'une entreprise/coopérative, les décisions sont souvent prise avec
 des votations sur des propositions.
 C'est votations peuvent être faites par e-voting dans la majorité des cas, cela permet de limité les erreurs 
 de comptage et d'avoir un résultat plus rapide s'il y a beaucoup de monde.
-Le vote électronique permet également d'avoir une plus grande confiance dans les résulats, car on ne fait pas 
-confience à un petit groupe chargé du décompte des voix (groupe qui ne contient pas toujours de personne de 
+Le vote électronique permet également d'avoir une plus grande confiance dans les résultats, car on ne fait pas 
+confiance à un petit groupe chargé du décompte des voix (groupe qui ne contient pas toujours de personne de 
 chaque position possible).
 
 Le corruption des personnes chargées du décompte peux être facile, alors que si l'application utilisé pour
@@ -33,6 +33,11 @@ l'e-voting est externe au groupe, il peut être beaucoup plus difficile de les c
 	se soit par rapport à un vote spécifique ou de manière globale à la structure.
 \end{important}
 
+\subsection{Prise de décision dans un groupe d'amis}
+
+
+
+
 \todo{Autre cas d'utilisation?}
 %\section{Sondage rapide et anonyme au sein d'un groupe}
 %
@@ -42,17 +47,12 @@ l'e-voting est externe au groupe, il peut être beaucoup plus difficile de les c
 
 
 
-
-\chapter{Lecture d'article}
-    % sec difficulté interprétation des sources
-\chapter{Clarté de la documentation des modules rust}
-
 \chapter{Le protocole}
 
 \section{Protocole à 2 tours}
 
-Pour permettre la confidentialité du vote y compris envers le serveur central receptionnant
-le bultin de vote, le protocole de vote fonctionne en 2 tours.
+Pour permettre la confidentialité du vote y compris envers le serveur central réceptionnant
+le bulletin de vote, le protocole de vote fonctionne en 2 tours.
 Lors du premier tours chaque participant publie une clé publique par candidat/option et une 
 preuve NIZK\footnote{Non-interactive zero-knoledge} que ces clés sont bien formée.
 Au début du second tours, chaque participant vérifie toutes les preuves que les clés publiques
