--- a/latex/content/resultat.tex
+++ b/latex/content/resultat.tex
@@ -259,8 +259,17 @@ sujet à ce problème}
 \section{Chacun peut vérifier que son vote a bien été pris en compte}
 \todo{}
 
-\chapter{Retour sur les cas d'utilisation}
+\chapter{Conclusion}
 \todo{}
+
+\section{résumé++}
+\section{dificulté}
+%\chapter{Lecture d'article}
+% sec difficulté interprétation des sources
+%\chapter{Clarté de la documentation des modules rust}
+\section{la suite}
+
+
 
 \end{document}
 
