--- a/latex/content/crypto-requirements.tex
+++ b/latex/content/crypto-requirements.tex
@@ -1,6 +1,6 @@
 \documentclass[../report]{subfiles}
 \begin{document}
-\chapter{Propriété cryptographique requise}
+\chapter{Propriété requise}
 \section{Bulletin Board}
 
 Le Bulletin Board est l'emplacement ou sont afficher l'ensemble des bulletins et informations publique des votants. 
@@ -32,27 +32,41 @@ Un lien peu être fait par le serveur entre le bulletin de vote déposé et le n
 L'utilisation d'un passeport numérique comme cela se fait en Estonie~\cite{vassil_diffusion_2016} permet de simplifié considérablement le processus
 pour les votants.
 
-\todo{}
-\section{Confidentialité du vote}
-La confidentialité du vote est le fait que personne ne peut faire le lien entre une personne
-et ce qu'elle a voté.
-C'est le premier rempart contre la contrainte sur les votants.
+Dans le cadre de ce projet l'authentification du votant n'a pas été faites, cependant comme le protocole mis en place en avait besoin, le POC utiliser 
+simplement le numéro d'électeur que le client dit être, il n'y a aucun vérification.
 
-Un confidentialité inconditionnel (c.-à-d.\ quelque soit le niveau de compromission des serveurs)
-est incompatible avec la vérifiabilité universelle (même c.-à-d.) du 
+\section{Confidentialité du vote}
+
+La confidentialité du vote est le fait que personne ne peut faire le lien entre une personne et ce qu'elle a voté.
+C'est le premier rempart contre la coercition des votants.
+Un vote publique permet de menacer une personne pour la forcé à changer son vote, et la menace peut être mise à exécution
+car le changement ou non-changement du vote sera connu de tous.
+
+La confidentialité inconditionnel est qu'en tout temps, le secret du vote soit préservé.
+Y compris lorsque les serveurs centraux sont compromis et ce à quelque soit le moment de la 
+compromission du ou des serveurs.
+La vérifiabilité universelle est que le résultat du vote peut être vérifié quelque soit le niveau de compromission
+des serveurs.
+
+Un confidentialité inconditionnel est incompatible avec la vérifiabilité universelle du 
 résultat~\cite{chevallier-mames_incompatible_2010,gharadaghy_verifiability_2010}.
-\todo{\originalcite{chevallier-mames_incompatible_2010} n'est pas accessible → vérifié les infos de l'abstract dans d'autre document}
-\todo{}
+Un choix doit donc être fait sur qu'est-ce qui est le plus important pour le cas d'utilisation désiré.
 
 \subsection{Vote sans contrainte possible}
 
-Pour qu'il n'y a pas de contrainte possible sur le votant, ce dernier ne doit pas pouvoir prouver
-ce qu'il a voté. 
-Si le votant choisi ou est contraint de prouver le choix de vote qu'il a fait, cela limit
-son libre choix pour le vote.
-\todo{}
+Si un votant peut prouver ce qu'il a voté à des tiers, ces dernier peuvent le contraindre à leur révéler son vote.
+Dans ce cas, comme lorsque le vote est publique, le votant peut être contraint dans son vote. 
+Pour évité ce problème, les scrutins traditionnel utilise des isoloirs et des bulletins de vote 
+standardisé.\footnote{Cependant avec les technologies actuelles, cette sécurité est moindre, car un votant pourrait 
+	choisir (ou être contraint) de se filmer lors de son vote et ainsi en créer une preuve.}
 
-\section{Verifiabilité}
+Lors d'un vote électronique, le votant peux avoir accès à des informations qui lui permette de déchiffrer son vote.
+Avec l'utilisation de machine à voter, ces informations peuvent être plus ou moins masquée au votant, mais lors
+de l'utilisation de l'e-voting à travers Internet, c'est le terminal de l'utilisateur qui est utilisé.
+Grâce à la maîtrise de ce terminal (en étant le propriétaire ou en l'ayant compromis) les informations permettant
+de prouve le vote peuvent être récupérée et transmise.
+
+\section{Vérifiabilité}
 
 \begin{important}{Important}
   La vérifiabilité se base sur des propriétés cryptographiques (sauf s'il y a publication 
@@ -62,7 +76,6 @@ son libre choix pour le vote.
   Cela vaut lors de la vérification du décompte mais également 
   lors de la vérification par le votant de son vote.
 \end{important}
-\todo{}
 
 \subsection{pour le votant}
 Le votant reçois immédiatement une preuve que son vote a belle et bien été pris en 
