--- a/latex/content/diff-methode.tex
+++ b/latex/content/diff-methode.tex
@@ -606,6 +606,9 @@ sur les possibilités et les restrictions.
   \end{table}
 
   \chapter{Les scrutins}
+  
+  Les simulations de scrutins on été réaliser grâce à du code écrit pour l'occasion disponible 
+  à l'adresse \url{https://github.com/g-roch/heig-tb-report/tree/main/simulation-scrutin}
 
   \begin{important}[$50\% + 1$ versus $ > 50\%$]{Définition de la majorité}
     On trouve fréquemment l'expression $50\%+1$ pour désigner le nombre de votes requis pour
@@ -799,7 +802,7 @@ sur les possibilités et les restrictions.
     {\cellcolor{red}mauvais}{La meilleure technique de vote consiste à se basé sur des sondage pour avoir une estimation des résultats et voter pour le candidat qui a le plus de chance d'être élu et pour lequel on n'est pas entièrement contre. Les petits candidats qui aurait une chance de l'emporté, mais non présent dans les sondages ou mal classée ne recevront que peu de voix, alors qu'il aurait pu faire de très bon score.}
     
 
-  \section{Méthode Borda}
+  \section{Méthode Borda}\label{sec:scrutin:borda}
   
   Chaques votants classent tous ou parties des options dans l'ordre de leur préférence.
   Les candidats reçoivent des points en fonction de leur position dans l'ordre de chaque bulletin.
