--- a/latex/content/resultat.tex
+++ b/latex/content/resultat.tex
@@ -39,7 +39,7 @@ Dans le tableau suivant, voici le nombre de votant pris en compte pour les simul
   \caption{Nombre de votant·es possible par groupe de population}\label{tab:}
 \end{table}
 
-\section{Taille de données}
+\section{Taille de données} \label{sec:res:data-size}
 
 Les données publiques générées lors du premier tours corresponds à 88 B par électeur et par option.
 Lors du second tours 104 B suplémentaire sont publié par électeur et par option.
